# llamba

./: CLONE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: clone.yml  test.yml
bioage_framework/: __init__.py  chat_model.py  classes.py  connector.py  functions.py
bioage_framework/src/: classes.py  functions.py  tasks.py
llamba/: __init__.py  bioage_model.py  chat_model.py  connector.py  functions.py  plots.py
llamba/chatmodel_wrappers/: chatbase.py  localhost.py  ollama.py
llamba/chatmodels/: chat_model.py  chatbase.py  ollama.py
llamba/util/: clock.py  condition.py  disease.py  document_repo.py
samples/: dummy.ipynb  framework-in-action-2.ipynb  framework-in-action.ipynb  immunoage_meet_chatbase.ipynb  immunoage_meet_ollama.ipynb  sample_analysis.ipynb
tests/: __init__.py  config.py  test_functions.py
