[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "llamba"
version = "0.1.10"
description = "A library to merge BioAge models with LLMs!"
readme = "README.md"
authors = [
  "Sergei Tikhomirov <sergey.zr.co.uk@gmail.com>", 
  "Mike Krivonosov <krivonosov@itmm.unn.ru>"
]
maintainers = [
    "Sergei Tikhomirov <sergey.zr.co.uk@gmail.com>", 
    "Mike Krivonosov <krivonosov@itmm.unn.ru>"
]
repository = "https://github.com/mike-live/llamba"

[tool.poetry.dependencies]
python = "3.11.*"
numpy = "^1" 
pandas = "2.2.3"
torch = [
  {url = "https://download.pytorch.org/whl/cpu/torch-2.3.1%2Bcpu-cp311-cp311-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
  {url = "https://download.pytorch.org/whl/cpu/torch-2.3.1%2Bcpu-cp311-cp311-win_amd64.whl", markers = "sys_platform == 'win32'"},
  {url = "https://download.pytorch.org/whl/cpu/torch-2.3.1-cp311-none-macosx_11_0_arm64.whl", markers = "sys_platform == 'macos'"}
]
pytorch_lightning = "2.1.4"
scipy = "1.12.0"
omegaconf = "*"
scikit-learn = "1.5.2"
shap = "0.46.0"
pytorch-widedeep = "1.1.1" 
seaborn = "*"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
