[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "llamba"
version = "0.1.11"
description = "A library to merge BioAge models with LLMs!"
readme = "README.md"
authors = [
  "Sergei Tikhomirov <sergey.zr.co.uk@gmail.com>", 
  "Mike Krivonosov <krivonosov@itmm.unn.ru>"
]
maintainers = [
    "Sergei Tikhomirov <sergey.zr.co.uk@gmail.com>", 
    "Mike Krivonosov <krivonosov@itmm.unn.ru>"
]
repository = "https://github.com/mike-live/llamba"

[tool.poetry.dependencies]
python = "3.11.*"
numpy = "^1" 
pandas = "2.2.3"
scipy = "^1.12.0"
omegaconf = "*"
scikit-learn = "1.5.2"
openpyxl = "3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
